[gd_scene load_steps=9 format=4 uid="uid://cvubdwe0x7skk"]

[ext_resource type="Script" path="res://entities/player/weapon_node.gd" id="1_f23ic"]
[ext_resource type="Material" uid="uid://cx7m4ek0v8onl" path="res://entities/knife/blade_material.tres" id="2_kp0wg"]
[ext_resource type="Material" uid="uid://c4v8aviffgaxk" path="res://entities/knife/handle_material.tres" id="3_jx0ts"]
[ext_resource type="Script" path="res://utils/second_order_dynamics.gd" id="4_jd8gs"]

[sub_resource type="ArrayMesh" id="ArrayMesh_lk37o"]
_surfaces = [{
"aabb": AABB(-0.312115, -0.0093569, -0.0435005, 0.35357, 0.0221755, 0.0893834),
"format": 34359742465,
"index_count": 96,
"index_data": PackedByteArray("AgABAAAAAQAEAAUABAACAAMAAQACAAQAAAAHAAIAAAAGAAcABgAJAAcABgAIAAkACAAKAAkAAQALAAAACwANAAwADQABAA4ACwABAA0AAAAPAAYAAAALAA8ABgAQAAgABgAPABAACAAQABEAEQAQAAoAAwANAAQAAwAMAA0AAgAMAAMAAgALAAwABAAOAAUABAANAA4ABQAOAAEABwALAAIABwAPAAsACQAPAAcACQAQAA8ACgAQAAkACAARAAoA"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray("PznhvTpcYDuNBRc99/vKO6Td4jql7zs9Zqk1vRoFUjyeLTK9ASYbPRoFUjw7zim97swpPRoFUjy0yrY8sswaPRoFUjxcHDs9X6YTvrnqhzvOjQU9XiVJvhoFUjxrCRS9hD2IvopHxTuBl/47nQyOvnGdBzxn5qe8is2fvq58sjtm5HK8Zqk1vbJNGbyeLTK9ASYbPbJNGbw7zim97swpPbJNGby0yrY8sswaPbJNGbxcHDs9XiVJvrJNGbxrCRS93VKNvoNWKLoIXbS8YsufvgwJsjukYXa8")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_f64e7"]
resource_name = "knife_Plane"
_surfaces = [{
"aabb": AABB(-0.312115, -0.0093569, -0.0435005, 0.35357, 0.0221755, 0.0893834),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAA/AACAPwAAAD8AAIA/AAAAPwAAgD8AAEA/AACAPwAAQD8AAIA/AABAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAD8AAIA/AAAAPwAAgD8AAAA/AACAPwAAQD8AAIA/AABAPwAAgD8AAEA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 96,
"index_data": PackedByteArray("CQAFAAIABQAQABMAEAAJAA0ABQAJABAAAAAYAAcAAAAUABgAFgAhABkAFgAdACEAHwAmACIABgAsAAMALAAyAC8AMgAGADUALAAGADIAAQA2ABUAAQAqADYAFwA6AB4AFwA4ADoAIAA7AD8APwA7ACcADAAxAA8ADAAuADEACAAtAAsACAApAC0ADgA0ABIADgAwADQAEQAzAAQAGgArAAoAGgA3ACsAJAA5ABsAJAA9ADkAKAA8ACMAHAA+ACUA"),
"material": ExtResource("2_kp0wg"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray("PznhvTpcYDuNBRc9PznhvTpcYDuNBRc9PznhvTpcYDuNBRc9PznhvTpcYDuNBRc99/vKO6Td4jql7zs99/vKO6Td4jql7zs99/vKO6Td4jql7zs9Zqk1vRoFUjyeLTK9Zqk1vRoFUjyeLTK9Zqk1vRoFUjyeLTK9Zqk1vRoFUjyeLTK9ASYbPRoFUjw7zim9ASYbPRoFUjw7zim9ASYbPRoFUjw7zim97swpPRoFUjy0yrY87swpPRoFUjy0yrY87swpPRoFUjy0yrY8sswaPRoFUjxcHDs9sswaPRoFUjxcHDs9sswaPRoFUjxcHDs9X6YTvrnqhzvOjQU9X6YTvrnqhzvOjQU9X6YTvrnqhzvOjQU9X6YTvrnqhzvOjQU9XiVJvhoFUjxrCRS9XiVJvhoFUjxrCRS9XiVJvhoFUjxrCRS9XiVJvhoFUjxrCRS9hD2IvopHxTuBl/47hD2IvopHxTuBl/47hD2IvopHxTuBl/47hD2IvopHxTuBl/47hD2IvopHxTuBl/47nQyOvnGdBzxn5qe8nQyOvnGdBzxn5qe8nQyOvnGdBzxn5qe8nQyOvnGdBzxn5qe8is2fvq58sjtm5HK8is2fvq58sjtm5HK8is2fvq58sjtm5HK8is2fvq58sjtm5HK8Zqk1vbJNGbyeLTK9Zqk1vbJNGbyeLTK9Zqk1vbJNGbyeLTK9Zqk1vbJNGbyeLTK9ASYbPbJNGbw7zim9ASYbPbJNGbw7zim9ASYbPbJNGbw7zim97swpPbJNGby0yrY87swpPbJNGby0yrY87swpPbJNGby0yrY8sswaPbJNGbxcHDs9sswaPbJNGbxcHDs9sswaPbJNGbxcHDs9XiVJvrJNGbxrCRS9XiVJvrJNGbxrCRS9XiVJvrJNGbxrCRS9XiVJvrJNGbxrCRS93VKNvoNWKLoIXbS83VKNvoNWKLoIXbS83VKNvoNWKLoIXbS83VKNvoNWKLoIXbS8YsufvgwJsjukYXa8YsufvgwJsjukYXa8rICC8f///z/mf0ET////P9l6PO8y8iXCUHn7Et7w70LPgP9/////P9l6PO/s5RzBUHn7Eujkw0GsgILx////P///4vz///+/2Xo874jv68EAABf6////v///4vz///+////Lhv///7/ZejzvU/eTwqju/3////8////Lhv///7/ZejzvvudDwc+A/3////8/qO7/f////z/Zejzv////P6yAgvH///8/5n9BE////z/jfebv////P5h5ax7///8/rICC8f///z/jfebv////PwAAF/r///+/OwS87P///7/KfbIJ////P+N95u////8/mHlrHv///z/0eGPt////PyF1WiP///8/433m7////z/0eGPt////P9wN+u7///+/OwS87P///7/KfbIJ////P/R4Y+3///8/IXVaI////z/cDfru////v///4vz///+/5n9BE////z8AABf6////v1B5+xIr7qtC///i/P///7///8uG////v1B5+xKD9WRDqO7/f////z///8uG////v1B5+xKM5uxBz4D/f////z+o7v9/////P1B5+xL///8/5n9BE////z8AABf6////v5h5ax7///8/OwS87P///7+YeWse////PyF1WiP///8/3A367v///787BLzs////v8p9sgn///8/IXVaI////z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_lk37o")

[sub_resource type="ArrayMesh" id="ArrayMesh_ixo0x"]
_surfaces = [{
"aabb": AABB(0.034698, -0.0270291, -0.0574995, 0.18, 0.0570291, 0.114999),
"format": 34896613377,
"index_count": 204,
"index_data": PackedByteArray("DwAdAB4ADwAQAB0AEAAfAB0AEAARAB8AEQAgAB8AEQASACAAEgAhACAAEgATACEAEwAiACEAEwAUACIAFAAjACIAFAAVACMAFQAeACMAFQAPAB4ABwACAAAAAgAEAAMABAAGAAUABgACAAcAAgAGAAQAGwAIAA4AGwAcAAgAGgAOAA0AGgAbAA4AGQANAAwAGQAaAA0AGAAMAAsAGAAZAAwAFwALAAoAFwAYAAsAFgAKAAkAFgAXAAoAHAAJAAgAHAAWAAkADgAPABUADgAIAA8ADQAVABQADQAOABUADAAUABMADAANABQACwATABIACwAMABMACgASABEACgALABIACQARABAACQAKABEACAAQAA8ACAAJABAAAAAWABwAAAACABYAAgAXABYAAgADABcAAwAYABcAAwAEABgABAAZABgABAAFABkABQAaABkABQAGABoABgAbABoABgAHABsABwAcABsABwAAABwAAQAeAB0AAQAdAB8AAQAfACAAAQAgACEAAQAhACIAAQAiACMAAQAjAB4A"),
"lods": [0.0121253, PackedByteArray("DwAdAB4ACAAdAA8ACAAJAB0ACQAfAB0ACAACAAkAAAACAAgACQAKAB8ACgAgAB8ACgAMACAAAwAMAAoADAAhACAADAAiACEADAANACIADQAjACIADQAOACMADgAPACMAIwAPAB4ADgAIAA8ABwAIAA4ABwAAAAgABQAGAA0ABQANAAwABAAFAAwAAwAEAAwABwACAAAABgACAAcAAgAGAAQABAAGAAUAAgAEAAMABgAOAA0ABgAHAA4AAgAKAAkAAgADAAoAAQAeAB0AAQAjAB4AAQAdAB8AAQAiACMAAQAhACIAAQAfACAAAQAgACEA"), 0.0322837, PackedByteArray("DwAdAB4ADwAEAB0AAAAEAA8ABAAfAB0ABAAgAB8ABAAhACAABAAiACEABAAHACIABwAjACIABwAPACMAIwAPAB4ABwAAAA8ABwAEAAAAAQAeAB0AAQAjAB4AAQAdAB8AAQAiACMAAQAhACIAAQAfACAAAQAgACEA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AAD///9/AACq4lR5/38AAAAASs1aGQAAAABdWwAAAAAAAAAACEcAAAAAAAD2uAAAAABdW///AAAAAErNpOYAAAxiIcP/fwAADGJYp7hQAAAMYuhoC0UAAAxi1jbCZQAADGLWNjyaAAAMYuho87oAAAxiWKdGrwAAVd5Dy/9/AABV3mqsjV0AAFXeGWcLVQAAVd6CL+FsAABV3oIvHZMAAFXeGWfzqgAAVd5qrHGiAAAxF1DEciYAADEXkV5VEAAAMRf4DE1OAAAxF/gMsbEAADEXkV6p7wAAMRdQxIzZAAAxF5nx/38AAP//24BRewAA//9nhf9/AAD//6R2KHoAAP//c25mfQAA//9zbpiCAAD//6R21YUAAP//24CthAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ow845"]
resource_name = "knife_Cylinder_002"
_surfaces = [{
"aabb": AABB(0.034698, -0.0270291, -0.0574995, 0.18, 0.0570291, 0.114999),
"attribute_data": PackedByteArray("AAD/f////3//v46Cax9ux98lKauAMRre/z+Unn9OGt4fWimrk2Bux2zb/38I8LCZ2rb/f+X7q81Ikv9/p9pa97Zt/39WpVr3JEn/fxmEq82SJP9/9o+wmQAA+U7///lOAAD5Tv//+U5s2/lObNv5Ttq2+U7atvlOSJL5TkiS+U62bflOtm35TiRJ+U4kSflOkiT5TpIk+U4AANQQ///UEGzb1BDattQQSJLUELZt1BAkSdQQkiTUEGzbZnTatmZ0SJJmdLZtZnQkSWZ0kiRmdAAAZnT//2Z0CHCwmWzbAAD/P46CAAAAAP//AADle6vN2rYAAKhaWvdIkgAAVyVa97ZtAAAZBKvNJEkAAPYPsJmSJAAA////fwAA1BBs2/9/2rb/f9q2/38kSf9/kiT/f2zb+U7atvlOtm35TiRJ+U6SJPlO"),
"format": 34896613399,
"index_count": 204,
"index_data": PackedByteArray("JwA3ADoAJwAoADcAKAA8ADcAKAApADwAKQA+ADwAKQAqAD4AKgBAAD4AKgArAEAAKwBCAEAAKwAsAEIALABEAEIALAAtAEQALQA5AEQALQAmADkAFQALAAIACwAPAA0ADwATABEAEwALABUACwATAA8AMwAWACUAMwA0ABYAMgAlACMAMgAzACUAMQAjACEAMQAyACMAMAAhAB8AMAAxACEALwAfAB0ALwAwAB8ALgAdABsALgAvAB0ANQAbABcANQAuABsAJAAmAC0AJAAYACYAIgAtACwAIgAkAC0AIAAsACsAIAAiACwAHgArACoAHgAgACsAHAAqACkAHAAeACoAGgApACgAGgAcACkAGQAoACcAGQAaACgAAQAuADUAAQAKAC4ACgAvAC4ACgAMAC8ADAAwAC8ADAAOADAADgAxADAADgAQADEAEAAyADEAEAASADIAEgAzADIAEgAUADMAFAA0ADMAFAAAADQACAA4ADYACQA2ADsABwA7AD0ABQA9AD8AAwA/AEEABABBAEMABgBDADgA"),
"lods": [0.0121253, PackedByteArray("JwA3ADoAFwA3ACcAFwAaADcAGgA8ADcAFwAKABoAAQAKABcAGgAcADwAHAA+ADwAHAAgAD4ADAAgABwAIABAAD4AIABCAEAAIAAiAEIAIgBEAEIAIgAkAEQAJAAmAEQARAAmADkAJAAWACYAFAAWACQAFAAAABYAEAASACIAEAAiAE4ADgAQAE4ASAAOAE4AFQALAAIAEwALABUACwATAA8ADwATABEACwAPAA0ASgBQAE8ASgBLAFAARwBNAEwARwBJAE0ACAA4ADYABgBDADgACQA2ADsABABBAEMAAwA/AEEABwA7AD0ABQA9AD8A"), 0.0322837, PackedByteArray("JwA3ADoAJwAOADcARQAOACcADgA8ADcADgA+ADwADgBAAD4ADgBCAEAADgAUAEIAFABEAEIAFABGAEQARAAmADkAFAAAACYAFQAPAAIACAA4ADYABgBDADgACQA2ADsABABBAEMAAwA/AEEABwA7AD0ABQA9AD8A")],
"material": ExtResource("3_jx0ts"),
"name": "aAAA",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 81,
"vertex_data": PackedByteArray("AAD///9/AdkAAP///3942wAA////fwAAquJUef9/IcCq4lR5/391wariVHn/f/+/quJUef9/tMKq4lR5/389w6riVHn/f5fAquJUef9/KMAAAErNWhmZ8QAASs1aGQAAAABdWwAAzuwAAF1bAAAAAAAAAAAIRy3XAAAAAAhHAAAAAAAA9rj9yQAAAAD2uAAAAABdW///bcAAAF1b//8AAAAASs2k5iTMAABKzaTmAAAMYiHD/3/p2AxiIcP/f8fbDGIhw/9/PtUMYiHD/38s1QxiWKe4ULTrDGJYp7hQAO8MYuhoC0X69gxi6GgLRUHrDGLWNsJlp94MYtY2wmVh1gxi1jY8ms/MDGLWNjya0soMYuho87pJwAxi6GjzunfADGJYp0avFcYMYlinRq8JzVXeQ8v/fwPZVd5Dy/9/095V3mqsjV2M81XeGWcLVYbvVd6CL+FsENhV3oIvHZMUyFXeGWfzqjzAVd5qrHGioskxF1DEcib17zEXkV5VENHrMRf4DE1OzNYxF/gMsbFWyjEXkV6p71bAMRdQxIzZ68wxF5nx/38D2TEXmfH/f4zb///bgFF76Jv//9uAUXtr/f//Z4X/f7v4//9nhf9/e93//2eF/39E6///pHYoesSK//+kdih6pef//3NuZn15x///c25mfWfR//9zbpiCAfn//3NumIJuw///pHbVhXH6//+kdtWFocH//9uArYS5+v//24CthP7OAAD///9/rutV3kPL/38CyQAASs1aGf//AABdWwAAKNwAAF1bAABM7QAAXVv//wTAAABKzaTmxMoMYlinuFD//wxi6GgLRaTsDGLWNjyaOs8MYuho87qZvwxiWKdGr1HJw65NpCGs5aX/P/9/33KPBs6RniP/fwAAQpaGLLCXYi/wZocMMYdjDp+0va3/P/9/Ej87PP8//38yU9tK/z//f/ReXVL/P/9/9Ia0YP8//3+VpxSS/z//f/yuG6Tuq/eljKrUqqKqyaqLtaC0r7MUrTpDt0I6QDQ9OFDzT6NTZUtjW/taUl75UQJ24G+ng9FdUp23mnCopJRQsXKhVKtLpfe0yK/iP9Q9u1HWSCti7VGAg5tj7qVZkES0Lq3tP7I8hVMYS4VeL1LthNxe8aeyk8+uPqQbrOKlLh0QaeC0k6o3gNo/vLjMlZmsD6CJx6pYDDwlOHTYOiK4U70++rFdAYpr6EVnj/cCFpDeXCGB9iF2r3CDI6rspI2qsaahe73KBCT6V7FNuyoemX9kMqX5kKmsLLNfVOohVF8rUyCRymJpob2N")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ixo0x")

[node name="WeaponNode" type="Node3D" node_paths=PackedStringArray("knife", "kn_off")]
script = ExtResource("1_f23ic")
relative_thres = 0.855
knife = NodePath("knife")
kn_off = NodePath("knife/KnifeOffset")
offset = Vector3(-0.295, -0.2, 0.035)
shoot_offset = Vector3(-0.5, 0, 0)
tween_amt = 1.0

[node name="knife" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="KnifeOffset" type="Node3D" parent="knife"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Plane" type="MeshInstance3D" parent="knife/KnifeOffset"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -0.48)
layers = 2
instance_shader_parameters/quant = 150.0
instance_shader_parameters/time = 10.635
mesh = SubResource("ArrayMesh_f64e7")
skeleton = NodePath("../..")

[node name="Cylinder" type="MeshInstance3D" parent="knife/KnifeOffset"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -0.48)
layers = 2
instance_shader_parameters/dissolve = 0.0
instance_shader_parameters/quant2 = 156.794
mesh = SubResource("ArrayMesh_ow845")
skeleton = NodePath("../..")

[node name="SecondOrderDynamics" type="Node" parent="."]
script = ExtResource("4_jd8gs")
_f = 3.0
_z = 0.5
_r = 0.2

[node name="RotOrder" type="Node" parent="."]
script = ExtResource("4_jd8gs")
_f = 2.0
_z = 2.0

[node name="ShootDynams" type="Node" parent="."]
script = ExtResource("4_jd8gs")
_r = 1.0

[node name="Throw" type="FmodEventEmitter3D" parent="."]
event_name = "event:/Sfx3D/Throw"
event_guid = "{da5182a1-a63b-44d7-a7be-489503ada1a7}"
preload_event = false
volume = 0.5
